recursion.lessons.recursion.tree.Tree.scala.error
Tree:19: error: missing arguments for method recule in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
	recule length
        ^